Auto stash before merge of "master" and "origin/master"

--- a/test-output/old/Default suite/classes.html
+++ b/test-output/old/Default suite/classes.html
@@ -4,26 +4,144 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>WebLineaUnica</td>
+<td>Tests.EComerce</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>asd</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>asdd</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td align='center' colspan='3'>@BeforeClass</td>
+<td>C31_Cliente_no_logueado_ingresa_a_Planes</td>
+<td>Home Tienda Barra Navegacion </td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>apis</td>
-<td>&nbsp;</td></tr>
+<td>C23_Ordenamiento_Precio_Mayor</td>
+<td>Filtros Home Tienda </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>TS054_Cliente_logueado_compra_un_accesorio_e_ingresa_un_mail_cargado_en_Siebel</td>
+<td>Venta Accesorio Registracion de email cliente logueado </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>C57_Compra_Accesorio_Carro_de_compra</td>
+<td>Financiacion Interna Accesorio </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>C13_Filtro_Tipo_de_Pantalla</td>
+<td>Filtros Home Tienda </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>C70_Compra_equipo_linea_nueva_Mail_no_registrado</td>
+<td>Financiacion Interna Producto </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>TS049_Cliente_no_logueado_compra_equipo_con_nueva_linea_e_ingresa_un_mail_registrado</td>
+<td>Registracion de email Linea nueva </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>C72_Compra_Accesorio_Mail_no_registrado</td>
+<td>Financiacion Interna Accesorio </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>TS053_Cliente_no_logueado_compra_un_accesorio_e_ingresa_un_mail_no_registrado_y_debe_completar_todos_los_datos_en_checkout</td>
+<td>Venta Accesorio Registracion de email </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>C28_Visualizacion_de_productos_en_cliente_No_logueado</td>
+<td>Home Tienda Visualizacion de Productos </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>C01_Busqueda_de_resultado</td>
+<td>Home Tienda Barra Navegacion </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>C68_Compra_equipo_linea_nueva_Mail_registrado</td>
+<td>Financiacion Interna Producto </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>C27_Visualizacion_de_catalogo_de_equipos_disponibles</td>
+<td>Home Tienda Visualizacion de Productos </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>C25_Ordenamiento_Precio_Menor</td>
+<td>Filtros Home Tienda </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>C29_Cliente_no_logueado_ingresa_a_Autogestion</td>
+<td>Home Tienda Barra Navegacion </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>C54_plazos_y_opciones_de_entrega</td>
+<td>Entrega Interna Producto </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>C52_Cliente_no_logueado_elige_linea_Nueva</td>
+<td>Financiacion Interna Producto </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>C30_Cliente_no_logueado_ingresa_a_Ayuda_Lineas</td>
+<td>Home Tienda Barra Navegacion </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>C55_opciones_de_financiacion</td>
+<td>Financiacion Interna Producto </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>C17_Limite_de_comparador_de_Equipos</td>
+<td>Filtros Home Tienda </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>C11_Filtro_Tipo_de_Camara</td>
+<td>Filtros Home Tienda </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>C09_Filtro_Marcas</td>
+<td>Filtros Home Tienda </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>C02_Busqueda_de_resultados_relacionados</td>
+<td>Home Tienda Barra Navegacion </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>C33_Cliente_no_logueado_ingresa_a_Temas_de_Ayuda</td>
+<td>Home Tienda Barra Navegacion </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>C56_opciones_de_Cuotas</td>
+<td>Financiacion Interna Producto </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>C32_Cliente_no_logueado_ingresa_a_Soporte_Tecnico</td>
+<td>Home Tienda Barra Navegacion </td>
+</tr>
+<tr>
+<td align='center' colspan='3'>@BeforeClass</td>
+</tr>
 <tr>
 <td align='center' colspan='3'>@BeforeMethod</td>
 </tr>
@@ -34,10 +152,6 @@
 <tr>
 <td align='center' colspan='3'>@AfterMethod</td>
 </tr>
-<tr>
-<td>&nbsp;</td>
-<td>after</td>
-<td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@AfterClass</td>
 </tr>
