--- a/test-output/old/Default suite/groups.html
+++ b/test-output/old/Default suite/groups.html
@@ -1,1 +1,5 @@
-<h2>Groups used for this test run</h2>
+<h2>Groups used for this test run</h2><table border="1">
+<tr> <td align="center"><b>Group name</b></td><td align="center"><b>Methods</b></td></tr><tr><td>Registracion de email</td><td>EComerce.TS054_Cliente_logueado_compra_un_accesorio_e_ingresa_un_mail_cargado_en_Siebel()[pri:0, instance:Tests.EComerce@1e3c938]<br/></td></tr>
+<tr><td>Venta Accesorio</td><td>EComerce.TS054_Cliente_logueado_compra_un_accesorio_e_ingresa_un_mail_cargado_en_Siebel()[pri:0, instance:Tests.EComerce@1e3c938]<br/></td></tr>
+<tr><td>cliente logueado</td><td>EComerce.TS054_Cliente_logueado_compra_un_accesorio_e_ingresa_un_mail_cargado_en_Siebel()[pri:0, instance:Tests.EComerce@1e3c938]<br/></td></tr>
+</table>
