--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,18 +1,8 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="756ead">  <td>19/01/14 16:56:36</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;WebLineaUnica.after()[pri:0, instance:WebLineaUnica@4ed9f0]">&lt;&lt;after</td> 
-<td>&nbsp;</td>  <td>main@13329486</td>   <td></td> </tr>
-<tr bgcolor="756ead">  <td>19/01/14 16:58:13</td>   <td>96590</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;WebLineaUnica.after()[pri:0, instance:WebLineaUnica@4ed9f0]">&lt;&lt;after</td> 
-<td>&nbsp;</td>  <td>main@13329486</td>   <td></td> </tr>
-<tr bgcolor="756ead">  <td>19/01/14 16:54:39</td>   <td>-117650</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;WebLineaUnica.apis()[pri:0, instance:WebLineaUnica@4ed9f0]">&gt;&gt;apis</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@13329486</td>   <td></td> </tr>
-<tr bgcolor="756ead">  <td>19/01/14 16:55:04</td>   <td>-91781</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="WebLineaUnica.asd()[pri:0, instance:WebLineaUnica@4ed9f0]">asd</td> 
-  <td>main@13329486</td>   <td></td> </tr>
-<tr bgcolor="756ead">  <td>19/01/14 16:56:45</td>   <td>8654</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="WebLineaUnica.asdd()[pri:0, instance:WebLineaUnica@4ed9f0]">asdd</td> 
-  <td>main@13329486</td>   <td></td> </tr>
-<tr bgcolor="756ead">  <td>19/01/14 16:55:02</td>   <td>-94158</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;WebLineaUnica.before()[pri:0, instance:WebLineaUnica@4ed9f0]">&gt;&gt;before</td> 
-<td>&nbsp;</td>  <td>main@13329486</td>   <td></td> </tr>
-<tr bgcolor="756ead">  <td>19/01/14 16:56:43</td>   <td>6447</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;WebLineaUnica.before()[pri:0, instance:WebLineaUnica@4ed9f0]">&gt;&gt;before</td> 
-<td>&nbsp;</td>  <td>main@13329486</td>   <td></td> </tr>
+<tr bgcolor="ab7c62">  <td>19/03/14 13:11:16</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="EComerce.TS054_Cliente_logueado_compra_un_accesorio_e_ingresa_un_mail_cargado_en_Siebel()[pri:0, instance:Tests.EComerce@1e3c938]">TS054_Cliente_logueado_compra_un_accesorio_e_ingresa_un_mail_cargado_en_Siebel</td> 
+  <td>main@20375095</td>   <td></td> </tr>
+<tr bgcolor="ab7c62">  <td>19/03/14 13:10:32</td>   <td>-43635</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;EComerce.before()[pri:0, instance:Tests.EComerce@1e3c938]">&gt;&gt;before</td> 
+<td>&nbsp;</td>  <td>main@20375095</td>   <td></td> </tr>
 </table>
